--- a/Infraestructure/Infraestructure.csproj
+++ b/Infraestructure/Infraestructure.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Repository\BinaryReaderExtension.cs" />
     <Compile Include="Repository\ListActivoRepository.cs" />
     <Compile Include="Repository\RafContext.cs" />
+    <Compile Include="Repository\RafContextEmpleado.cs" />
     <Compile Include="Repository\StreamActivoRepository.cs" />
   </ItemGroup>
   <ItemGroup>
