Elimando RafContextEmpleado y agregando metodo GetActivoFijoByEmpleado

--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Enum\EstadoEmpleado.cs" />
     <Compile Include="Interfaces\IActivoModel.cs" />
     <Compile Include="Interfaces\IDepreciacionModel.cs" />
+    <Compile Include="Interfaces\IEmpleadoModel.cs" />
     <Compile Include="Interfaces\IModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
